--- a/css/style.css
+++ b/css/style.css
@@ -67,12 +67,15 @@ body{
 
 /* Hide the dropdown links by default */
 .dropdown-content {
-    display: none;
+    display: block;
+    opacity: 0;
+    pointer-events: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    transition: opacity 0.2s ease-in-out;
 }
 
 /* Style the links inside the dropdown */
@@ -93,15 +96,23 @@ body{
 
 /* Show the dropdown on :focus-within (when the button or links are clicked) */
 .dropdown:focus-within .dropdown-content {
-    display: block;
-}
- .dropdown-content  a {
-    height: 200%
+    /* display: block; */
+    opacity: 1;
+    pointer-events: auto;
 }
 
 /* Optional: Close the dropdown when clicking outside (accessibility-friendly) */
 button:focus {
     outline: none;
+}
+
+.dropdown-content  a {
+    display: block;
+    height: 200%
+}
+
+.dropdown-content a:active {
+    background-color: #ddd;
 }
 
 .skip{
